--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -1,8 +1,18 @@
+
+:root{
+    --background-color: #5cdb95;
+    --card-color: #379683;
+    --text-color: #edf5e1;
+    --button-color: #05386b;
+    --select-button-color: #05386b;
+    /* --hover-color:  */
+  }
+  
 body {
     margin: 0;
     padding: 0;
     height: 200vh;
-    background-color: #1f1f2e;
+    background-color: var(--background-color);
     font-family: sans-serif;
     font-size: 15px;
 }
@@ -12,10 +22,10 @@ input {
 }
 h1{
     text-align: center;
-    color:#3FB7F3;
+    color: var(--text-color);
   }
 .input-field input::placeholder {
-    color: white;
+    color: var(--text-color);
     font-weight: 500;
 }
 
@@ -30,26 +40,26 @@ h1{
 }
 
 .status {
-    background: #3FB7F3;
+    background: var(--button-color);
     width: 100px;
     height: 30px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     text-align: center;
-    color: #ffffff;
+    color: var(--text-color);
     font-family: sans-serif;
     font-size: 15px;
     padding-top: 6px;
 }
 
 .login {
-    background: #3FB7F3;
+    background: var(--button-color);
     width: 100px;
     height: 30px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     text-align: center;
-    color: #ffffff;
+    color: var(--text-color);
     font-family: sans-serif;
     font-size: 15px;
     padding-top: 6px;
@@ -77,11 +87,11 @@ h1{
 }
 
 #display-sensor {
-    width: 20px;
+    width: 120px;
     font-family: sans-serif;
     font-size: 15px;
-    background-color: #3FB7F3;
-    color: white;
+    background-color: var(--select-button-color);
+    color: var(--text-color);
     border: 1px solid rgb(37, 66, 52);
     border-radius: 5px;
     cursor: pointer;
@@ -89,7 +99,7 @@ h1{
 
 /* ========live data status========= */
 .live-data {
-    background: #3FB7F3;
+    background: var(--background-color);
     position: relative;
     flex: 1;
     max-width: 220px;
@@ -104,7 +114,7 @@ h1{
 }
 
 #temp {
-    color: #ffffff;
+    color: var(--text-color);
     /* margin-top: 11px;
     margin-left: 11px; */
     margin: 11px;
@@ -112,7 +122,7 @@ h1{
 }
 
 #soil-moisture {
-    color: #ffffff;
+    color: var(--text-color);
     /* margin-top: 11px;
     margin-left: 11px; */
     margin: 11px;
@@ -120,7 +130,7 @@ h1{
 }
 
 #humidity {
-    color: #ffffff;
+    color: var(--text-color);
     margin-top: 11px;
     margin-left: 11px;
     margin: 11px;
@@ -130,8 +140,8 @@ h1{
 /* =========mode settings========== */
 .force-start {
     margin: 0;
-    background-color: #3FB7F3;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--text-color);
     border: none;
     height: 40px;
     border-radius: 5px;
@@ -152,7 +162,7 @@ h1{
     font-family: sans-serif;
     font-size: 17.55px;
     font-weight: bold;
-    color: white;
+    color: var(--text-color);
     padding-left: 20px;
     text-align: center;
     padding-right: 5px;
@@ -161,8 +171,8 @@ h1{
 #select-crop {
     font-family: sans-serif;
     font-size: 17.55px;
-    background-color: #3FB7F3;
-    color: white;
+    background-color: var(--select-button-color);
+    color: var(--text-color);
     border: 1px solid rgb(37, 66, 52);
     border-radius: 5px;
     cursor: pointer;
@@ -170,6 +180,9 @@ h1{
     padding-left: 20px;
 }
 
+#span_color{
+    color: var(--text-color);
+}
 /* ==========add new crops========== */
 .add-crops {
     display: flex;
@@ -192,8 +205,8 @@ h1{
     padding-right: 20px;
 }
 button{
-    background-color: #3FB7F3;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--text-color);
     border: none;
     height: 40px;
     width: 120px;
@@ -214,51 +227,29 @@ button:active{
 #cp {
     padding-top: 10px;
     padding-left: 20px;
-    color: white;
+    color: var(--text-color);
     font-size: 16px;
 }
 
 #var-temp {
-    color: #3FB7F3;
+    color: var(--text-color);
     margin-left: 84px;
 }
 
 #var-soil-moisture {
     margin-left: 70px;
-    color: #3FB7F3;
+    color: var(--text-color);
 }
-
 #var-humidity {
     margin-left: 105px;
-    color: #3FB7F3;
+    color: var(--text-color);
 }
 
 /* =========================== */
-.range {
-    margin-left: 20px;
-    width: 300px;
-    height: 10px;
-    -webkit-appearance: none;
-    background: #1f1f2e;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
-}
-
-.range::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: #3FB7F3;
-    cursor: pointer;
-    border: 3px solid #333;
-    box-shadow: -407px 0 0 400px #3FB7F3;
-}
 
 /* ========================== */
 .card-01 {
-    background: #29293d;
+    background: var(--card-color);
     position: relative;
     flex: 1;
     display: flex;
@@ -273,7 +264,7 @@ button:active{
 }
 
 .card-02 {
-    background: #29293d;
+    background: var(--card-color);
     position: relative;
     flex: 1;
     display: flex;
@@ -286,7 +277,7 @@ button:active{
 }
 
 .card-03 {
-    background: #29293d;
+    background: var(--card-color);
     position: relative;
     flex: 1;
     display: flex;
@@ -299,7 +290,7 @@ button:active{
 }
 
 .card-04 {
-    background: #29293d;
+    background: var(--card-color);
     position: relative;
     flex: 1;
     max-width: 460px;
@@ -362,18 +353,18 @@ hr {
     }
 
     #var-temp {
-        color: #3FB7F3;
+        color: var(--text-color);
         margin-left: 40px;
     }
 
     #var-soil-moisture {
         margin-left: 35px;
-        color: #3FB7F3;
+        color: var(--text-color);
     }
 
     #var-humidity {
         margin-left: 66px;
-        color: #3FB7F3;
+        color: var(--text-color);
     }
 
     .set-crop-text {
@@ -388,6 +379,7 @@ hr {
     .card-01 {
         flex: 100%;
         max-width: 230px;
+        height: 50px;
         display: flex;
 
     }
@@ -395,6 +387,7 @@ hr {
     .card-02 {
         flex: 100%;
         max-width: 230px;
+        height: 50px;
         display: flex;
 
     }
@@ -402,6 +395,7 @@ hr {
     .card-03 {
         flex: 100%;
         max-width: 230px;
+        height: 50px;
         display: flex;
 
     }
@@ -422,19 +416,18 @@ hr {
     .range {
         width: 250px;
     }
-
     #temp {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
     #soil-moisture {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
     #humidity {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
@@ -472,19 +465,21 @@ hr {
     .range {
         width: 280px;
     }
-
+    #display-sensor{
+        width: 20px;
+    }
     #temp {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
     #soil-moisture {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
     #humidity {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: 10px;
     }
 
@@ -520,6 +515,9 @@ hr {
 @media (min-width: 768px) and (max-width: 1024px) {
 
     /* Styles */
+    #display-sensor{
+        width: 20px;
+    }
     #temp {
         margin-top: 10px;
         margin-left: 10px;
@@ -564,6 +562,9 @@ hr {
 @media (min-width: 1025px) and (max-width: 1280px) {
 
     /* Styles */
+    #display-sensor{
+        width: 20px;
+    }
     #temp {
         margin-top: 10px;
         margin-left: 10px;
