--- a/css/set_timer.css
+++ b/css/set_timer.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+:root{
+  --background-color: #5cdb95;
+  --card-color: #379683;
+  --text-color: #edf5e1;
+  --button-color: #05386b;
+  --select-button-color: #05386b;
+  /* --hover-color:  */
+}
 .wrapper, .content{
   display: flex;
   align-items: center;
@@ -8,10 +16,9 @@
 .wrapper{
   width: 340px;
   padding: 30px 30px 38px;
-  background: #29293d;
+  background: var(--card-color);
   border-radius: 10px;
   flex-direction: column;
-  /* box-shadow: 0 10px 25px rgba(0,0,0,0.1); */
 }
 .wrapper img{
   max-width: 103px;
@@ -29,11 +36,11 @@
   cursor: no-drop;
 }
 .content .column{
-  padding: 0 10px;
+  padding: 0 5px;
   border-radius: 5px;
   border: 1px solid #bfbfbf;
-  width: calc(100% / 4 - 2px);
-  background: #3FB7F3;
+  width: calc(100% / 4 - 1px);
+  background: var(--select-button-color);
 }
 .content.disable .column{
   opacity: 0.6;
@@ -44,21 +51,21 @@
   height: 53px;
   border: none;
   outline: none;
-  background: #3FB7F3;
+  background: var(--select-button-color);
   font-size: 19px;
-  color: white;
+  color:  var(--text-color);
 }
 .wrapper button{
   width: 100%;
   border: none;
   outline: none;
-  color: #fff;
+  color: var(--text-color);
   cursor: pointer;
   font-size: 20px;
   padding: 17px 0;
   margin-top: 20px;
   border-radius: 5px;
-  background: #3FB7F3;
+  background: var(--button-color);
 }
 
 
@@ -66,7 +73,7 @@
 and (min-device-width : 150px) and (max-device-width : 300px){
 /* Styles */
 .wrapper{
-    width: 180px;
+    width: 200px;
 }
 }
 
@@ -77,7 +84,7 @@ and (min-device-width : 300px)
 and (max-device-width : 480px) {
 /* Styles */
 .wrapper{
-    width: 260px;
+    width: 280px;
 }
 }
 
@@ -85,18 +92,22 @@ and (max-device-width : 480px) {
 @media (min-width: 481px) and (max-width: 767px) {
 /* Styles */
 .wrapper{
-  width: 260px;
+  width: 300px;
 }
 }
 
 /* iPads (portrait and landscape) ----------- */
 @media (min-width: 768px) and (max-width: 1024px){
 /* Styles */
+.wrapper{
+  width: 400px;
+}
 
 }
 
 /* Desktops and laptops ----------- */
 @media (min-width: 1025px) and (max-width: 1280px) {
-
-
+  .wrapper{
+    width: 400px;
+  }
 }
