--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
+:root{
+  --background-color: #5cdb95;
+  --card-color: #379683;
+  --text-color: #edf5e1;
+  --button-color: #05386b;
+  --select-button-color: #05386b;
+  /* --hover-color:  */
+}
+
 body{
   margin: 0;
   padding: 0;
   height: 200vh;
-  background-color:#1f1f2e;
+  background-color:var(--background-color);
   font-family:sans-serif;
   font-size: 15px;
 }
 h1{
   text-align: center;
-  color:#3FB7F3;
+  color: var(--text-color);
 }
 .head-section{
   display: flex;
@@ -20,26 +29,26 @@ h1{
   margin: 6px;
 }
 .status{
-  background: #3FB7F3;
+  background: var(--button-color);
   width: 100px;
   height: 30px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   text-align: center;
-  color:  #ffffff;
+  color:  var(--text-color);
   font-family:sans-serif;
   font-size: 15px;
   padding-top: 6px;
 }
 
 .login{
-  background:#3FB7F3;
+  background: var(--button-color);
   width: 100px;
   height: 30px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   text-align: center;
-  color:  #ffffff;
+  color:   var(--text-color);
   font-family:sans-serif;
   font-size: 15px;
   padding-top: 6px;
@@ -64,18 +73,21 @@ h1{
   font-size: 12px;
 }
 #display-sensor{
-  width: 20px;
+  width: 120px;
   font-family:sans-serif;
   font-size: 15px;
-  background-color:#3FB7F3;
-  color: white;
+  background-color: var(--select-button-color);
+  color: var(--text-color);
   border: 1px solid rgb(37, 66, 52);
   border-radius: 5px;
   cursor: pointer;
 }
+#span_color {
+  color: var(--text-color);
+}
 /* ========live data status========= */
 .live-data{
-  background: #3FB7F3;
+  background: var(--background-color);
   position: relative;
   flex: 1;
   max-width: 220px;
@@ -90,21 +102,21 @@ h1{
 }
 
 #temp{
-  color:  #ffffff;
+  color:  var(--text-color);
   /* margin-top: 11px;
   margin-left: 11px; */
   margin: 11px;
   font-size: 15px;
 }
 #soil-moisture{
-  color:  #ffffff;
+  color:   var(--text-color);
   /* margin-top: 11px;
   margin-left: 11px; */
   margin: 11px;
   font-size: 15px;
 }
 #humidity{
-  color:  #ffffff;
+  color:   var(--text-color);
   margin-top: 11px;
   margin-left: 11px;
   margin: 11px;
@@ -113,8 +125,8 @@ h1{
 /* =========mode settings========== */
 .force-start{
   margin: 0;
-  background-color: #3FB7F3;
-  color: white;
+  background-color:  var(--button-color);
+  color:  var(--text-color);
   border: none;
   height: 40px;
   border-radius: 5px;
@@ -132,8 +144,8 @@ h1{
 
 .switch-mode{
   margin: 0;
-  background-color: #3FB7F3;
-  color: white;
+  background-color:  var(--background-color);
+  color:  var(--text-color);
   border: none;
   height: 40px;
   border-radius: 5px;
@@ -154,65 +166,65 @@ h1{
   font-family:sans-serif;
   font-size: 17.55px;
   font-weight: bold;
-  color: white;
+  color:  var(--text-color);
   padding-left: 20px;
   padding-right: 50px;
 }
 #select-crop{
   font-family:sans-serif;
   font-size: 17.55px;
-  background-color:#3FB7F3;
-  color: white;
+  background-color: var(--button-color);
+  color:  var(--text-color);
   border: 1px solid rgb(37, 66, 52);
   border-radius: 5px;
   cursor: pointer;
   width: 100px;
 }
 
-#user-guide{
+/* #user-guide{
   text-align: center;
-  color: white;
+  color:  var(--text-color);
   margin-top: 12px;
 }
 a{
-  color:white;
+  color: var(--text-color);
   text-decoration: none;
 }
 a:hover{
-  color:#3FB7F3;
+  color: var(--title-color-dark);
   cursor: pointer;
 }
 a:active{
-  color: #3FB7F3;
-}
+  color: rgb(32, 240, 143);
+} */
 
 /* ==========current presets========== */
 #current-preset{
-  color: white;
+  color:  var(--text-color);
   text-align: center;
   font-size:20px;
 }
 #cp{
   padding-left: 20px;
-  color: white;
+  color:  var(--text-color);
   font-size:16px;
 }
 
 #var-temp{
-  color: #3FB7F3;
+  color: var(--text-color);
   margin-left: 84px;
 }
 #var-soil-moisture{
   margin-left: 70px;
-  color: #3FB7F3;
+  color:  var(--text-color);
 }
 #var-humidity{
   margin-left: 105px;
-  color: #3FB7F3;
+  color:  var(--text-color);
 }
 /* ========================== */
 .card-01{
-  background: #29293d;
+  background:  var(--card-color);
   position: relative;
   flex: 1;
   display: flex;
@@ -227,7 +239,7 @@ a:active{
 }
 
 .card-02{
-  background: #29293d;
+  background: var(--card-color);
   position: relative;
   flex: 1;
   display: flex;
@@ -240,7 +252,7 @@ a:active{
 }
 
 .card-03{
-  background: #29293d;
+  background: var(--card-color);
   position: relative;
   flex: 1;
   display: flex;
@@ -252,7 +264,7 @@ a:active{
   justify-content: space-between;
 }
 .card-04{
-  background: #29293d;
+  background: var(--card-color);
   position: relative;
   flex: 1;
   max-width: 460px;
@@ -265,7 +277,7 @@ a:active{
 
 hr{
   height: 1px;
-  background-color: #3d3d5c;
+  background-color: var(--select-button-color);
   border: none;
   }
 
@@ -289,16 +301,16 @@ hr{
   }
   
   #var-temp{
-    color: #3FB7F3;
+    color: var(--title-color);
     margin-left: 40px;
   }
   #var-soil-moisture{
     margin-left: 35px;
-    color: #3FB7F3;
+    color: var(--title-color);
   }
   #var-humidity{
     margin-left: 66px;
-    color: #3FB7F3;
+    color: var(--title-color);
   }
   .set-crop-text{
     padding-left: 20px;
@@ -307,6 +319,7 @@ hr{
   .card-01{
     flex: 100%;
     max-width: 230px;
+    height: 50px;
     display: flex;
 
   }
@@ -314,6 +327,7 @@ hr{
   .card-02{
     flex: 100%;
     max-width: 230px;
+    height: 50px;
     display: flex;
 
   }
@@ -321,6 +335,7 @@ hr{
   .card-03{
     flex: 100%;
     max-width: 230px;
+    height: 50px;
     display: flex;
 
   }
@@ -339,15 +354,15 @@ and (min-device-width : 300px)
 and (max-device-width : 480px) {
 /* Styles */
 #temp{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 #soil-moisture{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 #humidity{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 
@@ -371,7 +386,7 @@ and (max-device-width : 480px) {
 }
 .card-04{
   flex: 100%;
-  max-width: 320px;
+  max-width: 340px;
 }
 
 }
@@ -379,16 +394,19 @@ and (max-device-width : 480px) {
 /* Smartphones (landscape) ----------- */
 @media (min-width: 481px) and (max-width: 767px) {
 /* Styles */
+#display-sensor{
+  width: 20px;
+}
 #temp{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 #soil-moisture{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 #humidity{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 
@@ -414,7 +432,7 @@ and (max-device-width : 480px) {
 }
 .card-04{
   flex: 100%;
-  max-width: 320px;
+  max-width: 360px;
 }
 
 }
@@ -422,6 +440,9 @@ and (max-device-width : 480px) {
 /* iPads (portrait and landscape) ----------- */
 @media (min-width: 768px) and (max-width: 1024px){
 /* Styles */
+#display-sensor{
+  width: 20px;
+}
 #temp{
   margin-top: 10px;
   margin-left: 10px;
@@ -434,8 +455,21 @@ and (max-device-width : 480px) {
   margin-top: 10px;
   margin-left: 10px;
 }
+#cp{
+  padding-left: 50px;
+  color: var(--title-color);
+  font-size:20px;
+}
 
-
+.set-crop-text{
+  font-size: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+#select-crop{
+  font-size: 20px;
+  width: 120px;
+}
 .card-01{
   flex: 100%;
   max-width: 190px;
@@ -454,7 +488,7 @@ and (max-device-width : 480px) {
 }
 .card-04{
   flex: 100%;
-  max-width: 400px;
+  max-width: 470px;
 }
 
 }
@@ -462,6 +496,9 @@ and (max-device-width : 480px) {
 /* Desktops and laptops ----------- */
 @media (min-width: 1025px) and (max-width: 1280px) {
 /* Styles */
+#display-sensor{
+  width: 20px;
+}
 #temp{
   margin-top: 10px;
   margin-left: 10px;
@@ -473,6 +510,21 @@ and (max-device-width : 480px) {
 #humidity{
   margin-top: 10px;
   margin-left: 10px;
+}
+#cp{
+  padding-left: 50px;
+  color: var(--title-color);
+  font-size:20px;
+}
+
+.set-crop-text{
+  font-size: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+#select-crop{
+  font-size: 20px;
+  width: 120px;
 }
 
 .card-01{
