--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -1,13 +1,13 @@
 
 :root{
-    --background-color: #5cdb95;
-    --card-color: #379683;
+    --background-color: #89abe3ff;
+    --card-color: #4056a1;
     --text-color: #edf5e1;
-    --button-color: #05386b;
+    --button-color: rgb(230, 56, 126);
     --select-button-color: #05386b;
     /* --hover-color:  */
-  }
-  
+}
+
 body {
     margin: 0;
     padding: 0;
