--- a/css/modal.css
+++ b/css/modal.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
 :root{
-  --background-color: #5cdb95;
-  --card-color: #379683;
+  --background-color: #89abe3ff;
+  --card-color: #4056a1;
   --text-color: #edf5e1;
-  --button-color: #05386b;
+  --button-color: rgb(230, 56, 126);
   --select-button-color: #05386b;
   /* --hover-color:  */
 }
+
 
 /*Custom Btn*/
 .btn {
