--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 :root{
-  --background-color: #5cdb95;
-  --card-color: #379683;
+  --background-color: #89abe3ff;
+  --card-color: #4056a1;
   --text-color: #edf5e1;
-  --button-color: #05386b;
+  --button-color: rgb(230, 56, 126);
   --select-button-color: #05386b;
   /* --hover-color:  */
 }
