--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -86,7 +86,7 @@ h1{
     font-size: 12px;
 }
 
-#display-sensor {
+.select_sensor {
     width: 120px;
     font-family: sans-serif;
     font-size: 15px;
