--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1{
   flex-wrap: wrap;
   font-size: 12px;
 }
-#display-sensor{
+.select_sensor{
   width: 120px;
   font-family:sans-serif;
   font-size: 15px;
@@ -301,16 +301,16 @@ hr{
   }
   
   #var-temp{
-    color: var(--title-color);
+    color: var(--text-color);
     margin-left: 40px;
   }
   #var-soil-moisture{
     margin-left: 35px;
-    color: var(--title-color);
+    color: var(--text-color);
   }
   #var-humidity{
     margin-left: 66px;
-    color: var(--title-color);
+    color: var(--text-color);
   }
   .set-crop-text{
     padding-left: 20px;
@@ -457,7 +457,7 @@ and (max-device-width : 480px) {
 }
 #cp{
   padding-left: 50px;
-  color: var(--title-color);
+  color: var(--text-color);
   font-size:20px;
 }
 
@@ -513,7 +513,7 @@ and (max-device-width : 480px) {
 }
 #cp{
   padding-left: 50px;
-  color: var(--title-color);
+  color: var(--text-color);
   font-size:20px;
 }
 
