--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -64,6 +64,17 @@ h1{
     font-size: 15px;
     padding-top: 6px;
 }
+.goog-te-combo{
+    background: var(--button-color);
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: var(--text-color);
+    font-family: sans-serif;
+    font-size: 15px;
+}
 
 .login:hover {
     cursor: pointer;
