--- a/css/login.css
+++ b/css/login.css
@@ -27,6 +27,40 @@ input {
   min-height: 100vh;
   overflow: hidden;
 }
+.goog-te-combo{
+  background: var(--button-color);
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color: var(--text-color);
+  font-family: sans-serif;
+  font-size: 15px;
+  cursor: pointer;
+}
+.head_section{
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  justify-items: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin: 6px;
+}
+.back{
+  background: var(--button-color);
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color:  var(--text-color);
+  font-family:sans-serif;
+  font-size: 15px;
+  padding-top: 6px;
+  cursor: pointer;
+}
 
 .forms-container {
   position: absolute;
