--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,18 @@ h1{
   text-align: center;
   color: var(--text-color);
 }
+.goog-te-combo{
+  background: var(--button-color);
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color: var(--text-color);
+  font-family: sans-serif;
+  font-size: 15px;
+  cursor: pointer;
+}
 .head-section{
   display: flex;
   justify-content: center;
